syntax = "proto3";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/tembleking/test-grpc-gateway/pkg/application/proto";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions {
    security {
      key: "Bearer";
      value: {
        name: "Authorization";
        type: TYPE_API_KEY;
        description: "Bearer Token";
        in: IN_HEADER;
      }
    }
  };
};

// The description of the test service
service TestService {
  // The description of the method
  rpc Test(google.protobuf.Empty) returns (TestResponse) {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      deprecated: false,
      security: [
        {
          security_requirement: {
            key: "Bearer";
          }
        }
      ],
    };
    option (google.api.http) = {
      get: "/test"
    };
  }

  // The description of the method
  rpc ReceiveName(TestRequestWithName) returns (TestResponse) {
    option (google.api.http) = {
      post: "/test"
      body: "*"
    };
  }
}

// TestResponse is the response message for the Test method.
message TestResponse {
  // Message is the test message.
  string message = 1 [(google.api.field_behavior) = REQUIRED];
}

// TestRequestWithName is the request message for the ReceiveName method.
message TestRequestWithName {
  // Name is the name of the person.
  string name = 1;
}